Fixed footer issue on mobile.

--- a/css/shared/_footer.scss
+++ b/css/shared/_footer.scss
@@ -36,7 +36,7 @@
 	}
 	@include breakpoint(phone) {
 		padding: 0 17px;
-		height: 40px;
+		height: 60px;
 		p, a {
 			font-size: 11px;
 		}
